--- a/src/vistas/MenuPrincipal.form
+++ b/src/vistas/MenuPrincipal.form
@@ -3,10 +3,11 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
-    <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
+    <SyntheticProperty name="generateCenter" type="boolean" value="true"/>
   </SyntheticProperties>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
@@ -178,6 +179,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="PACIENTES"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botonPacientesActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="botonPersonalMedico">
           <Properties>
@@ -189,6 +193,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="PERSONAL M&#xc9;DICO"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botonPersonalMedicoActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="botonConsultas">
           <Properties>
@@ -200,6 +207,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="CONSULTAS"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botonConsultasActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="botonEnfermeria">
           <Properties>
