--- a/src/vistas/NuevaCita.form
+++ b/src/vistas/NuevaCita.form
@@ -9,13 +9,17 @@
     <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[600, 465]"/>
     </Property>
+    <Property name="resizable" type="boolean" value="false"/>
     <Property name="size" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[600, 465]"/>
     </Property>
   </Properties>
+  <AccessibilityProperties>
+    <Property name="AccessibleContext.accessibleDescription" type="java.lang.String" value=""/>
+  </AccessibilityProperties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
-    <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
+    <SyntheticProperty name="generateCenter" type="boolean" value="true"/>
   </SyntheticProperties>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
@@ -186,6 +190,7 @@
         <Component class="javax.swing.JTextField" name="campoDni">
           <Properties>
             <Property name="editable" type="boolean" value="false"/>
+            <Property name="name" type="java.lang.String" value="DNI" noResource="true"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="botonRegistrar">
@@ -213,6 +218,7 @@
         <Component class="javax.swing.JTextField" name="campoNomApe">
           <Properties>
             <Property name="editable" type="boolean" value="false"/>
+            <Property name="name" type="java.lang.String" value="NOMBRE Y APELLIDOS" noResource="true"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel3">
@@ -232,17 +238,29 @@
           </Properties>
         </Component>
         <Component class="com.toedter.calendar.JDateChooser" name="dateFecha">
+          <Properties>
+            <Property name="name" type="java.lang.String" value="FECHA" noResource="true"/>
+          </Properties>
         </Component>
         <Component class="javax.swing.JComboBox" name="comboHora">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="4">
+              <StringArray count="12">
                 <StringItem index="0" value="Seleccione"/>
-                <StringItem index="1" value="Una semana"/>
-                <StringItem index="2" value="Dos semanas"/>
-                <StringItem index="3" value="Un mes"/>
+                <StringItem index="1" value="8.00"/>
+                <StringItem index="2" value="8.30"/>
+                <StringItem index="3" value="9.00"/>
+                <StringItem index="4" value="9.30"/>
+                <StringItem index="5" value="10.00"/>
+                <StringItem index="6" value="10.30"/>
+                <StringItem index="7" value="11.00"/>
+                <StringItem index="8" value="11.30"/>
+                <StringItem index="9" value="12.00"/>
+                <StringItem index="10" value="12.30"/>
+                <StringItem index="11" value="13.00"/>
               </StringArray>
             </Property>
+            <Property name="name" type="java.lang.String" value="HORA" noResource="true"/>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
