--- a/src/vistas/NuevaCitaEnfermeria.form
+++ b/src/vistas/NuevaCitaEnfermeria.form
@@ -3,20 +3,20 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
-    <Property name="locationByPlatform" type="boolean" value="true"/>
     <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[600, 465]"/>
     </Property>
     <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[600, 465]"/>
     </Property>
+    <Property name="resizable" type="boolean" value="false"/>
     <Property name="size" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[600, 465]"/>
     </Property>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
-    <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
+    <SyntheticProperty name="generateCenter" type="boolean" value="true"/>
   </SyntheticProperties>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
@@ -33,8 +33,8 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jPanel1" max="32767" attributes="0"/>
-          <Component id="jPanel24" alignment="0" max="32767" attributes="0"/>
+          <Component id="jPanel24" max="32767" attributes="0"/>
+          <Component id="jPanel1" alignment="0" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
@@ -42,8 +42,7 @@
           <Group type="102" alignment="0" attributes="0">
               <Component id="jPanel1" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jPanel24" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+              <Component id="jPanel24" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -77,7 +76,7 @@
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="campoNomApe" alignment="0" min="-2" pref="245" max="-2" attributes="0"/>
                               <Component id="comboHora" alignment="0" min="-2" pref="128" max="-2" attributes="0"/>
-                              <Component id="dateFecha" alignment="0" min="-2" pref="161" max="-2" attributes="0"/>
+                              <Component id="comboFecha" alignment="0" min="-2" pref="172" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
@@ -87,7 +86,7 @@
                           <Component id="campoDni" min="-2" pref="128" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace pref="105" max="32767" attributes="0"/>
+                  <EmptySpace pref="103" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -104,12 +103,12 @@
                       <Component id="jLabel92" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="campoNomApe" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="52" max="32767" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jLabel93" alignment="0" min="-2" max="-2" attributes="0"/>
-                      <Component id="dateFecha" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace pref="49" max="32767" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="jLabel93" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="comboFecha" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel94" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="comboHora" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -133,6 +132,7 @@
         <Component class="javax.swing.JTextField" name="campoDni">
           <Properties>
             <Property name="editable" type="boolean" value="false"/>
+            <Property name="name" type="java.lang.String" value="DNI" noResource="true"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="botonRegistrar">
@@ -160,6 +160,7 @@
         <Component class="javax.swing.JTextField" name="campoNomApe">
           <Properties>
             <Property name="editable" type="boolean" value="false"/>
+            <Property name="name" type="java.lang.String" value="NOMBRE Y APELLIDOS" noResource="true"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel93">
@@ -178,9 +179,31 @@
             <Property name="text" type="java.lang.String" value="Hora"/>
           </Properties>
         </Component>
-        <Component class="com.toedter.calendar.JDateChooser" name="dateFecha">
-        </Component>
         <Component class="javax.swing.JComboBox" name="comboHora">
+          <Properties>
+            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+              <StringArray count="12">
+                <StringItem index="0" value="Seleccione"/>
+                <StringItem index="1" value="8.00"/>
+                <StringItem index="2" value="8.30"/>
+                <StringItem index="3" value="9.00"/>
+                <StringItem index="4" value="9.30"/>
+                <StringItem index="5" value="10.00"/>
+                <StringItem index="6" value="10.30"/>
+                <StringItem index="7" value="11.00"/>
+                <StringItem index="8" value="11.30"/>
+                <StringItem index="9" value="12.00"/>
+                <StringItem index="10" value="12.30"/>
+                <StringItem index="11" value="13.00"/>
+              </StringArray>
+            </Property>
+            <Property name="name" type="java.lang.String" value="HORA" noResource="true"/>
+          </Properties>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+          </AuxValues>
+        </Component>
+        <Component class="javax.swing.JComboBox" name="comboFecha">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="4">
