--- a/src/vistas/NuevaConsultaEnfermeria.form
+++ b/src/vistas/NuevaConsultaEnfermeria.form
@@ -9,6 +9,8 @@
     <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[750, 600]"/>
     </Property>
+    <Property name="undecorated" type="boolean" value="true"/>
+    <Property name="resizable" type="boolean" value="false"/>
     <Property name="size" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[750, 600]"/>
     </Property>
@@ -18,7 +20,7 @@
   </AccessibilityProperties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
-    <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
+    <SyntheticProperty name="generateCenter" type="boolean" value="true"/>
   </SyntheticProperties>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
@@ -177,6 +179,7 @@
         <Component class="javax.swing.JTextField" name="campoDni">
           <Properties>
             <Property name="editable" type="boolean" value="false"/>
+            <Property name="name" type="java.lang.String" value="DNI" noResource="true"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="botonCancelar">
@@ -189,6 +192,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Cancelar"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botonCancelarActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="botonGuardar">
           <Properties>
@@ -200,6 +206,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Guardar"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botonGuardarActionPerformed"/>
+          </Events>
         </Component>
         <Container class="javax.swing.JPanel" name="jPanel3">
           <Properties>
@@ -279,6 +288,9 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="campoMaxima">
+              <Properties>
+                <Property name="name" type="java.lang.String" value="TENSION MAXIMA" noResource="true"/>
+              </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel3">
               <Properties>
@@ -289,6 +301,9 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="campoMinima">
+              <Properties>
+                <Property name="name" type="java.lang.String" value="TENSION MINIMA" noResource="true"/>
+              </Properties>
             </Component>
           </SubComponents>
         </Container>
@@ -350,6 +365,9 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="campoGlucosa">
+              <Properties>
+                <Property name="name" type="java.lang.String" value="NIVEL DE GLUCOSA" noResource="true"/>
+              </Properties>
             </Component>
           </SubComponents>
         </Container>
@@ -413,6 +431,9 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="campoPeso">
+              <Properties>
+                <Property name="name" type="java.lang.String" value="PESO" noResource="true"/>
+              </Properties>
             </Component>
           </SubComponents>
         </Container>
