--- a/src/vistas/NuevaConsultaMedica.form
+++ b/src/vistas/NuevaConsultaMedica.form
@@ -9,13 +9,15 @@
     <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[1000, 650]"/>
     </Property>
+    <Property name="undecorated" type="boolean" value="true"/>
+    <Property name="resizable" type="boolean" value="false"/>
     <Property name="size" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[1000, 650]"/>
     </Property>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
-    <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
+    <SyntheticProperty name="generateCenter" type="boolean" value="true"/>
   </SyntheticProperties>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
@@ -192,6 +194,7 @@
         <Component class="javax.swing.JTextField" name="campoDni">
           <Properties>
             <Property name="editable" type="boolean" value="false"/>
+            <Property name="name" type="java.lang.String" value="DNI" noResource="true"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel6">
@@ -241,6 +244,7 @@
               <Properties>
                 <Property name="columns" type="int" value="20"/>
                 <Property name="rows" type="int" value="5"/>
+                <Property name="name" type="java.lang.String" value="DIAGNOSTICO" noResource="true"/>
               </Properties>
             </Component>
           </SubComponents>
@@ -264,6 +268,7 @@
               <Properties>
                 <Property name="columns" type="int" value="20"/>
                 <Property name="rows" type="int" value="5"/>
+                <Property name="name" type="java.lang.String" value="TRATAMIENTO" noResource="true"/>
               </Properties>
             </Component>
           </SubComponents>
@@ -287,6 +292,7 @@
               <Properties>
                 <Property name="columns" type="int" value="20"/>
                 <Property name="rows" type="int" value="5"/>
+                <Property name="name" type="java.lang.String" value="OBSERVACIONES" noResource="true"/>
               </Properties>
             </Component>
           </SubComponents>
